# diploma-work

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  README.md  build.gradle.kts  docker-compose.test.yml  docker-compose.yml  settings.gradle.kts
backend/analysis_service/src/: config.yml  pyproject.toml  run.py  setup.cfg
backend/analysis_service/src/app/: launch.py  main.py  utils.py
backend/analysis_service/src/app/config/: __init__.py  classes.py
backend/analysis_service/src/app/modules/analyse/: routes.py  services.py  tasks.py
backend/analysis_service/src/app/modules/auth/: routes.py  services.py
backend/analysis_service/src/app/modules/common/: __init__.py  tasks.py
backend/analysis_service/src/app/modules/common/cache/: __init__.py  classes.py
backend/analysis_service/src/app/modules/common/db/: __init__.py  classes.py  utils.py
backend/analysis_service/src/app/modules/common/files/: __init__.py  classes.py
backend/analysis_service/src/app/modules/simple/: routes.py
backend/analysis_service/src/app/settings/: arq.py  logging.py
backend/analysis_service/src/docker/: Dockerfile  entrypoint.sh
backend/analysis_service/src/tests/: conftest.py  test_main.py
backend/analysis_service/src/tests/resources/: config.yml
backend/analysis_service/src/tests/test_config/: __init__.py  conftest.py  test_loading.py
backend/analysis_service/src/tests/test_modules/test_auth/: test_validate.py
backend/analysis_service/src/tests/test_modules/test_simple/: conftest.py  test_routes.py
frontend/: README.md  docker-compose.yml
(+335 files in other folders)
