[tool.poetry]
name = "analysis-service"
version = "0.0.1"
description = "Analysis service for diploma project"
authors = ["Андрей Романов <romanov_andrey_vl@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
uvicorn = "^0.11.5"
motor = "^2.1.0"
layered-yaml-attrdict-config = "^18.12.3"
aioredis = "^1.3.1"
arq = "^0.19"
pyhdfs = "^0.3.1"
nengo-dl = "^3.2.0"
numpy = "1.18.4"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-randomly = "^3.3.1"
pytest-testmon = "^1.0.2"
pytest-timeout = "^1.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
